@@ -5,6 +5,7 @@ dependencies {
     implementation(project(":plugin-utilities-core"))
     implementation(project(":plugin-utilities-test"))
 
+    implementation("com.github.ajalt.clikt:clikt:3.2.0")
     implementation("com.xenomachina:kotlin-argparser:2.0.7")
     implementation("org.junit.jupiter:junit-jupiter:5.7.0")
 }
@@ -36,6 +37,31 @@ open class IOCliTask : org.jetbrains.intellij.tasks.RunIdeTask() {
     }
 }
 
+open class IOCliAndroidTask : org.jetbrains.intellij.tasks.RunIdeTask() {
+    // Name of the runner
+    @get:Input
+    val runner: String? by project
+
+    // Input directory with files
+    @get:Input
+    val input: String? by project
+
+    @get:Input
+    val androidSdk: String? by project
+
+    init {
+        jvmArgs = listOf(
+            "-Djava.awt.headless=true",
+            "--add-exports",
+            "java.base/jdk.internal.vm=ALL-UNNAMED",
+            "-Djdk.module.illegalAccess.silent=true"
+        )
+        maxHeapSize = "20g"
+        standardInput = System.`in`
+        standardOutput = System.`out`
+    }
+}
+
 tasks {
     register<IOCliTask>("ioCli") {
         dependsOn("buildPlugin")
@@ -43,6 +69,15 @@ tasks {
             runner,
             input?.let { "--input=$it" },
             output?.let { "--output=$it" }
+        )
+    }
+
+    register<IOCliAndroidTask>("androidCli") {
+        dependsOn("buildPlugin")
+        args = listOfNotNull(
+            runner,
+            input,
+            androidSdk?.let { "--androidSdk=$it" }
         )
     }
 }
